--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,33 +1,17 @@
-/* .App {
-  text-align: center;
+.navWrapper {
+  height: 75px;
+  width: 100%;
+  border: 1px solid black;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.allAppWithoutNavWrapper {
+  display: grid;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.allAppWithoutNavContainer {
+  width: 80%;
+  min-width: 800px;
+  border: 1px solid red;
+  justify-self: center;
+  padding-top: 15px;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-} */
