--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,5 +1,5 @@
 .app {
-  font-family: Playfair;
+  font-family: "Playfair Display", serif;
 }
 .navWrapper {
   height: 75px;
@@ -51,7 +51,7 @@ nav > a {
   height: 620px;
   display: grid;
   place-items: center center;
-  font-family: Roboto;
+  font-family: "Roboto", sans-serif;
 }
 
 .topMost {
